# archeio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: fetch-ffmpeg.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_spawn.rs
src-tauri/src/: commands.rs  error.rs  ffmpeg.rs  lib.rs  library.rs  main.rs  oauth.rs  overlay.rs  supervisor.rs  tray.rs  types.rs  youtube.rs
src/components/: AccountCard.tsx  Button.tsx  Library.tsx  OAuthWizard.tsx  Toast.tsx  ToastProvider.tsx
src/lib/: api.ts  types.ts  utils.ts
