[package]
name = "archeio"
version = "0.0.1"
description = "Hotkey-driven game clipper that streams to YouTube as your storage backend."
authors = ["Archeio Contributors"]
edition = "2021"

[lib]
name = "archeio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Capitalised so the executable on disk and in Task Manager reads "Archeio.exe"
# even in dev builds (release builds are renamed by the bundler from
# tauri.conf.json's productName).
[[bin]]
name = "Archeio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-single-instance = "2.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"

keyring = { version = "3", features = ["windows-native"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
